filtering without pandas

--- a/notebooks/PsBoardPqS3.ipynb
+++ b/notebooks/PsBoardPqS3.ipynb
@@ -17,30 +17,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "from progressivis.core import Scheduler, Every\n",
     "from progressivis.table import Table\n",
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.io import ParquetLoader\n",
-    "#from progressivis.datasets import get_dataset\n",
     "from progressivis.table.constant import Constant\n",
     "import asyncio as aio\n",
     "import pyarrow as pa\n",
+    "import pyarrow.compute as pc\n",
+    "from functools import reduce\n",
     "import s3fs\n",
-    "import threading\n",
-    "import os\n",
+    "\n",
     "\n",
     "def _quiet(x): pass\n",
     "\n",
+    "gt = pc.greater\n",
+    "lt = pc.less\n",
+    "\n",
     "def _filter(bat):\n",
-    "    df = bat.to_pandas()\n",
-    "    pklon = df['pickup_longitude']\n",
-    "    pklat = df['pickup_latitude']\n",
-    "    dolon = df['dropoff_longitude']\n",
-    "    dolat = df['dropoff_latitude']\n",
-    "    res = df[(pklon > -74.08) & (pklon < -73.5) & (pklat > 40.55) & (pklat < 41.00) &\n",
-    "                  (dolon > -74.08) & (dolon < -73.5) & (dolat > 40.55) & (dolat < 41.00)]\n",
-    "    return pa.RecordBatch.from_pandas(res)\n",
+    "    pklon = bat['pickup_longitude']\n",
+    "    pklat = bat['pickup_latitude']\n",
+    "    dolon = bat['dropoff_longitude']\n",
+    "    dolat = bat['dropoff_latitude']\n",
+    "    mask = [gt(pklon, -74.08), lt(pklon, -73.5), gt(pklat, 40.55), lt(pklat, 41.00),\n",
+    "                  gt(dolon, -74.08), lt(dolon, -73.5), gt(dolat, 40.55), lt(dolat, 41.00)]\n",
+    "    return bat.filter(reduce(pc.and_, mask))\n",
     "\n",
     "try:\n",
     "    s = scheduler\n",
@@ -57,8 +58,7 @@
     "\n",
     "URLS = [f\"{PREFIX}-{month:0>2}.parquet\" for month in range(1,7)]\n",
     "\n",
-    "\n",
-    "FILENAMES = pd.DataFrame({'filename': URLS})\n",
+    "FILENAMES = {'filename': URLS}\n",
     "CST = Constant(Table('filenames', data=FILENAMES), scheduler=s)\n",
     "CSV = ParquetLoader(index_col=False, skipinitialspace=True,\n",
     "                columns=['pickup_longitude', 'pickup_latitude',\n",
