join with subcolumns, DAG widget, fixes

--- a/notebooks/Constructor.ipynb
+++ b/notebooks/Constructor.ipynb
@@ -1,49 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "cd098fb2",
-   "metadata": {},
-   "source": [
-    "# Main"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fleet-final",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "(function(){{\n",
-       "  let indices = [];\n",
-       "  IPython.notebook.get_cells().forEach( function(cell) {{\n",
-       "    if (cell.metadata !== undefined){{\n",
-       "      if(cell.metadata.progressivis_tag !== undefined){{\n",
-       "        cell.metadata.editable = true;\n",
-       "        cell.metadata.deletable = true;\n",
-       "        let i = IPython.notebook.find_cell_index(cell);\n",
-       "        indices.push(i);\n",
-       "      }}\n",
-       "    }}\n",
-       "  }});\n",
-       "  let uIndices = [...new Set(indices)];\n",
-       "  IPython.notebook.delete_cells(uIndices);\n",
-       "}})();\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from progressivis_nb_widgets.nbwidgets import cleanup_cells, Constructor\n",
     "cleanup_cells()\n",
@@ -81,10 +45,10 @@
    "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {
-    "height": "calc(100% - 180px)",
-    "left": "10px",
-    "top": "150px",
-    "width": "303.188px"
+    "height": "836.875px",
+    "left": "59px",
+    "top": "111.125px",
+    "width": "340px"
    },
    "toc_section_display": true,
    "toc_window_display": true
