--- a/notebooks/ScalerDemoCellCmd.ipynb
+++ b/notebooks/ScalerDemoCellCmd.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "geographic-shannon",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
     "        display(wg)\n",
     "    else:\n",
     "        wg.value = img\n",
-    "heatmap.after_run_proc = _after_run\n",
+    "heatmap.on_after_run(_after_run)\n",
     "isc = IScalerIn(sc)\n",
     "display(isc)\n",
     "isco = IScalerOut(sc)\n",
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#type(dvar.result)import yaml,sys"
+    "type(dvar.result)"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dvar.result['ignore_max']=50;print(dvar.result)"
+    "dvar.result['ignore_max']=50;print(dvar.result)"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%load_ext progressivis"
+    "%load_ext progressivis.core.magics"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%progressivis dvar.result"
+    "%progressivis dvar.result"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%from_input dvar\n",
+    "%%from_input dvar\n",
     "delta: -1\n",
     "ignore_max: 3\n",
     "reset: True"
@@ -167,8 +167,9 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +183,38 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.13"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
