--- a/notebooks/Constructor.ipynb
+++ b/notebooks/Constructor.ipynb
@@ -4,105 +4,75 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "fleet-final",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "(function(){{\n",
-       "  let indices = [];\n",
-       "  IPython.notebook.get_cells().forEach( function(cell) {{\n",
-       "    if (cell.metadata !== undefined){{\n",
-       "      if(cell.metadata.progressivis_tag !== undefined){{\n",
-       "        cell.metadata.editable = true;\n",
-       "        cell.metadata.deletable = true;\n",
-       "        let i = IPython.notebook.find_cell_index(cell);\n",
-       "        indices.push(i);\n",
-       "      }}\n",
-       "    }}\n",
-       "  }});\n",
-       "  let uIndices = [...new Set(indices)];\n",
-       "  IPython.notebook.delete_cells(uIndices);\n",
-       "}})();\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3abe0cc4538f478389987c177c2c4d59",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Constructor(children=(HTML(value=\"<h2 id='prog_139724801613728'>root</h2>\"), Button(description='Start schedul…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting scheduler\n",
-      "# Scheduler added module(s): ['dyn_var_1', 'sink_1']\n"
+      "no doc\n",
+      "finalize: nothing to do on <class 'progressivis.io.csv_loader.CSVLoader'>\n",
+      "params doc <class 'progressivis.io.csv_loader.CSVLoader'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.io.pa_csv_loader.PACSVLoader'>\n",
+      "params doc <class 'progressivis.io.pa_csv_loader.PACSVLoader'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.io.parquet_loader.ParquetLoader'>\n",
+      "params doc <class 'progressivis.io.parquet_loader.ParquetLoader'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.io.simple_csv_loader.SimpleCSVLoader'>\n",
+      "params doc <class 'progressivis.io.simple_csv_loader.SimpleCSVLoader'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.io.variable.Variable'>\n",
+      "params doc <class 'progressivis.io.variable.Variable'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.stats.Stats'>\n",
+      "params doc <class 'progressivis.stats.stats.Stats'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.min.Min'>\n",
+      "params doc <class 'progressivis.stats.min.Min'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.max.Max'>\n",
+      "params doc <class 'progressivis.stats.max.Max'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.idxmax.IdxMax'>\n",
+      "params doc <class 'progressivis.stats.idxmax.IdxMax'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.idxmin.IdxMin'>\n",
+      "params doc <class 'progressivis.stats.idxmin.IdxMin'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.var.VarH'>\n",
+      "params doc <class 'progressivis.stats.var.VarH'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.var.Var'>\n",
+      "params doc <class 'progressivis.stats.var.Var'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.histogram1d.Histogram1D'>\n",
+      "params doc <class 'progressivis.stats.histogram1d.Histogram1D'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.histogram1d_categorical.Histogram1DCategorical'>\n",
+      "params doc <class 'progressivis.stats.histogram1d_categorical.Histogram1DCategorical'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.histogram2d.Histogram2D'>\n",
+      "params doc <class 'progressivis.stats.histogram2d.Histogram2D'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.sample.Sample'>\n",
+      "params doc <class 'progressivis.stats.sample.Sample'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.table.constant.Constant'>\n",
+      "params doc <class 'progressivis.table.constant.Constant'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.table.constant.ConstDict'>\n",
+      "params doc <class 'progressivis.table.constant.ConstDict'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.random_table.RandomPTable'>\n",
+      "params doc <class 'progressivis.stats.random_table.RandomPTable'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.stats.random_table.RandomDict'>\n",
+      "params doc <class 'progressivis.stats.random_table.RandomDict'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.table.hist_index.HistogramIndex'>\n",
+      "params doc <class 'progressivis.table.hist_index.HistogramIndex'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.table.range_query_2d.RangeQuery2d'>\n",
+      "params doc <class 'progressivis.table.range_query_2d.RangeQuery2d'> {}\n",
+      "finalize: nothing to do on <class 'progressivis.table.range_query.RangeQuery'>\n",
+      "params doc <class 'progressivis.table.range_query.RangeQuery'> {}\n"
      ]
     },
     {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "(function(){\n",
-       "  let i = -1;\n",
-       "  IPython.notebook.get_cells().forEach( function(cell) {\n",
-       "    if (cell.metadata !== undefined){\n",
-       "      if(cell.metadata.progressivis_tag === \"no_previous\"){\n",
-       "        cell.metadata.editable = true;\n",
-       "        cell.metadata.deletable = true;\n",
-       "        i = IPython.notebook.find_cell_index(cell);\n",
-       "      }\n",
-       "    }\n",
-       "  });\n",
-       "  if(i<0){\n",
-       "   i = IPython.notebook.get_cell_elements().length;\n",
-       "  } else {\n",
-       "    i = i+1;\n",
-       "  }\n",
-       "  IPython.notebook.insert_cell_at_index(\"markdown\", i).set_text(\"## CSV loader\");\n",
-       "  IPython.notebook.select(i);\n",
-       "  IPython.notebook.execute_cell(i);\n",
-       "  let meta = {\n",
-       "    \"trusted\": true,\n",
-       "    \"editable\": false,\n",
-       "    \"deletable\": false,\n",
-       "    \"progressivis_tag\": \"139722749787008\"\n",
-       "   };\n",
-       "  IPython.notebook.get_cell(i).metadata = meta;\n",
-       "  IPython.notebook.insert_cell_at_index(\"code\", i+1).set_text(\"Constructor.widget('CSV loader')\");\n",
-       "  IPython.notebook.select(i+1);\n",
-       "  IPython.notebook.execute_cell(i+1);\n",
-       "  IPython.notebook.get_cell(i+1).metadata = meta;\n",
-       "})();\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "TypeError",
+     "evalue": "cleanup_cells() missing 1 required positional argument: 'manager'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mipyprogressivis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnbwidgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m cleanup_cells, Constructor\n\u001b[0;32m----> 2\u001b[0m \u001b[43mcleanup_cells\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m Constructor()\n",
+      "\u001b[0;31mTypeError\u001b[0m: cleanup_cells() missing 1 required positional argument: 'manager'"
+     ]
     }
    ],
    "source": [
-    "from progressivis_nb_widgets.nbwidgets import cleanup_cells, Constructor\n",
+    "from ipyprogressivis.nbwidgets import cleanup_cells, Constructor\n",
     "cleanup_cells()\n",
     "Constructor()"
    ]
@@ -139,141 +109,6 @@
     "o = Constructor.widget('Scaler', 0)\n",
     "o.children[0].output_module.table.name"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d13ddf6",
-   "metadata": {
-    "progressivis_tag": "139722749787008"
-   },
-   "source": [
-    "## CSV loader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a7abaca9",
-   "metadata": {
-    "progressivis_tag": "139722749787008"
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "974e378ad45247d48db1514f3dc82c27",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "NodeCarrier(children=(CsvLoaderW(children=(Textarea(value='/home/poli/JDF2016/github/weather-us/nyc_2015.csv /…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Scheduler added module(s): ['constant_1', 'simple_csv_loader_1']\n"
-     ]
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "(function(){\n",
-       "  let i = -1;\n",
-       "  IPython.notebook.get_cells().forEach( function(cell) {\n",
-       "    if (cell.metadata !== undefined){\n",
-       "      if(cell.metadata.progressivis_tag === \"139722749787008\"){\n",
-       "        cell.metadata.editable = true;\n",
-       "        cell.metadata.deletable = true;\n",
-       "        i = IPython.notebook.find_cell_index(cell);\n",
-       "      }\n",
-       "    }\n",
-       "  });\n",
-       "  if(i<0){\n",
-       "   i = IPython.notebook.get_cell_elements().length;\n",
-       "  } else {\n",
-       "    i = i+1;\n",
-       "  }\n",
-       "  IPython.notebook.insert_cell_at_index(\"markdown\", i).set_text(\"## Scaler\");\n",
-       "  IPython.notebook.select(i);\n",
-       "  IPython.notebook.execute_cell(i);\n",
-       "  let meta = {\n",
-       "    \"trusted\": true,\n",
-       "    \"editable\": false,\n",
-       "    \"deletable\": false,\n",
-       "    \"progressivis_tag\": \"139722740999888\"\n",
-       "   };\n",
-       "  IPython.notebook.get_cell(i).metadata = meta;\n",
-       "  IPython.notebook.insert_cell_at_index(\"code\", i+1).set_text(\"Constructor.widget('Scaler', 0)\");\n",
-       "  IPython.notebook.select(i+1);\n",
-       "  IPython.notebook.execute_cell(i+1);\n",
-       "  IPython.notebook.get_cell(i+1).metadata = meta;\n",
-       "})();\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "Constructor.widget('CSV loader')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8d5bce7",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "progressivis_tag": "139722740999888"
-   },
-   "source": [
-    "## Scaler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3f277430",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "progressivis_tag": "139722740999888"
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "181e2e7cff7b47fcb0d811346861691f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "NodeCarrier(children=(ScalerW(children=(IScalerIn(children=(Label(value='Scaled columns'), SelectMultiple(opti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Scheduler added module(s): ['dyn_var_2', 'histogram1_d_1', 'histogram1_d_2', 'histogram1_d_3', 'max_1', 'min_1', 'min_max_scaler_1', 'sink_2', 'sink_3', 'sink_4', 'sink_5', 'sink_6']\n"
-     ]
-    }
-   ],
-   "source": [
-    "Constructor.widget('Scaler', 0)"
-   ]
   }
  ],
  "metadata": {
@@ -294,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
