Fix notebooks and improve Heatmap module [ci skip]

--- a/notebooks/HeatmapDemo2.ipynb
+++ b/notebooks/HeatmapDemo2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "geographic-shannon",
    "metadata": {},
    "outputs": [],
@@ -51,14 +51,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "recent-marks",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce36cbeda71e4e0c8cee574eb8880a8e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VegaWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Task pending name='Task-5' coro=<Scheduler.start() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:273>>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from vega.widget import VegaWidget\n",
+    "from ipyprogressivis.nbwidgets import VegaWidget\n",
     "from itertools import product\n",
     "import scipy as sp\n",
     "import numpy as np\n",
@@ -78,9 +101,9 @@
     "    cscale = cmax - cmin\n",
     "    scale_hl = float(high - low)\n",
     "    scale = float(high - low) / cscale\n",
-    "    data = (np.log10(histo) * 1.0 - cmin) * scale_hl + 0.4999\n",
-    "    data[data > high] = high\n",
-    "    data[data < 0] = 0\n",
+    "    data = (np.log1p(histo) * 1.0 - cmin) * scale_hl + 0.4999\n",
+    "    # data[data > high] = high\n",
+    "    # data[data < 0] = 0\n",
     "    #data = data.tolist()\n",
     "    if low != 0:\n",
     "        data += low\n",
@@ -95,14 +118,50 @@
     "    }\n",
     "    wg.spec = spec_with_data\n",
     "display(wg)\n",
-    "histogram2d.after_run_proc = _after_run\n",
-    "s.task_start();"
+    "histogram2d.on_after_run(_after_run)\n",
+    "s.task_start()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9f400972-0d67-4025-84a9-d7a73b756aef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Task pending name='Task-8' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leaving run loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "s.task_stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "058eec95-731e-4767-9b69-90de9625525e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -116,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
