--- a/notebooks/MulticlassScatterplotDemo.ipynb
+++ b/notebooks/MulticlassScatterplotDemo.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from progressivis_nb_widgets import ControlPanel, Scatterplot, ModuleGraph, wait_for_click\n",
+    "from ipyprogressivis.nbwidgets import ControlPanel, Scatterplot, ModuleGraph# , wait_for_click\n",
     "sc = Scatterplot()\n",
     "gr = ModuleGraph()"
    ]
@@ -17,16 +17,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Scheduler added module(s): ['constant_1', 'csv_loader_1', 'every_1', 'histogram_index_1', 'histogram_index_2', 'histogram_index_3', 'histogram_index_4', 'max_1', 'max_2', 'max_3', 'max_4', 'mc_histogram2_d_1', 'mc_histogram2_d_2', 'mc_scatter_plot_1', 'merge_dict_1', 'merge_dict_2', 'merge_dict_3', 'merge_dict_4', 'min_1', 'min_2', 'min_3', 'min_4', 'range_query2d_1', 'range_query2d_2', 'sample_1', 'sample_2', 'variable_1', 'variable_2', 'variable_3', 'variable_4', 'virtual_variable_1', 'virtual_variable_2']\n",
-      "*****"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import pandas as pd\n",
@@ -98,11 +89,12 @@
     "    btn, cb =  cpanel.cb_args(action)\n",
     "    while True:\n",
     "        await wait_for_click(btn, cb)\n",
-    "    \n",
-    "aio.create_task(s.start())\n",
-    "coros=sc.link_module(MULTICLASS)+[control_panel(\"resume\"), control_panel(\"stop\"), control_panel(\"step\")]\n",
-    "for coro in coros:\n",
-    "    aio.create_task(coro)"
+    "\n",
+    "\n",
+    "# aio.create_task(s.start())\n",
+    "# coros=sc.link_module(MULTICLASS)+[control_panel(\"resume\"), control_panel(\"stop\"), control_panel(\"step\")]\n",
+    "# for coro in coros:\n",
+    "#     aio.create_task(coro)"
    ]
   },
   {
@@ -112,47 +104,86 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74fbc19ebd554b408b0b7a04255cd56e",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "VBox(children=(Tab(children=(Scatterplot(data='{\"is_running\": true, \"is_terminated\": false, \"run_number\": 124,…"
+       "<Task pending name='Task-5' coro=<Scheduler.start() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:273>>"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "******************In scheduler, tasks {<Task finished name='Task-12' coro=<Scheduler.shortcut_manager() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:126> result=None>, <Task finished name='Task-11' coro=<Scheduler._run_loop() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:364> result=None>} done\n",
-      "Leaving run()\n",
-      "In scheduler, tasks {<Task finished name='Task-16' coro=<Scheduler.shortcut_manager() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:126> result=None>, <Task finished name='Task-15' coro=<Scheduler._run_loop() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:364> result=None>} done\n",
-      "Leaving run()\n",
-      "*In scheduler, tasks {<Task finished name='Task-20' coro=<Scheduler.shortcut_manager() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:126> result=None>, <Task finished name='Task-19' coro=<Scheduler._run_loop() done, defined at /home/fekete/src/progressivis/progressivis/core/scheduler.py:364> result=None>} done\n",
-      "Leaving run()\n"
+      "Starting scheduler\n",
+      "# Scheduler added module(s): ['constant_1', 'csv_loader_1', 'every_1', 'histogram_index_1', 'histogram_index_2', 'mc_histogram2_d_1', 'mc_histogram2_d_2', 'mc_scatter_plot_1', 'range_query2d_1', 'range_query2d_2', 'sample_1', 'sample_2', 'variable_1', 'variable_2']\n"
      ]
     }
    ],
    "source": [
     "import ipywidgets as ipw\n",
+    "\n",
     "tab = ipw.Tab()\n",
     "tab.children = [sc, gr]\n",
     "tab.set_title(0, 'Scatterplot')\n",
     "tab.set_title(1, 'Module graph')\n",
     "vbox = ipw.VBox([tab, cpanel])\n",
+    "\n",
+    "s.task_start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2867ae663bf419a8a1138cfcc070065",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Tab(children=(Scatterplot(), ModuleGraph()), selected_index=0, titles=('Scatterplot', 'Module g…"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "vbox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Task pending name='Task-8' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leaving run loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "# s.task_stop()"
+   ]
   }
  ],
  "metadata": {
@@ -175,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
