--- a/notebooks/DataViewer.ipynb
+++ b/notebooks/DataViewer.ipynb
@@ -10,26 +10,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "geographic-shannon",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'DataViewer' from 'ipyprogressivis.nbwidgets' (/home/fekete/src/ipyprogressivis/ipyprogressivis/nbwidgets/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprogressivis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpsdict\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PDict\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprogressivis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mscaling\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MinMaxScaler\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mipyprogressivis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnbwidgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataViewer\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprogressivis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Sink\n\u001b[1;32m     17\u001b[0m s \u001b[38;5;241m=\u001b[39m Scheduler\u001b[38;5;241m.\u001b[39mdefault \u001b[38;5;241m=\u001b[39m Scheduler()\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'DataViewer' from 'ipyprogressivis.nbwidgets' (/home/fekete/src/ipyprogressivis/ipyprogressivis/nbwidgets/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import tempfile as tf\n",
     "import os\n",
     "from progressivis import Scheduler, Print\n",
-    "from progressivis.io import SimpleCSVLoader, DynVar\n",
+    "from progressivis.io import SimpleCSVLoader, Variable\n",
     "from progressivis.stats import Histogram2D, Min, Max\n",
     "from progressivis.datasets import get_dataset\n",
-    "from progressivis.vis import StatsExtender\n",
+    "from progressivis.vis import StatsFactory\n",
     "from progressivis.table import PTable\n",
     "from progressivis.table.constant import Constant\n",
     "from progressivis.utils.psdict import PDict\n",
     "from progressivis.stats.scaling import MinMaxScaler\n",
-    "from progressivis_nb_widgets.nbwidgets import DataViewer\n",
-    "from progressivis.datasets import get_dataset\n",
+    "from ipyprogressivis.nbwidgets import DataViewer\n",
     "from progressivis.core import Sink\n",
     "\n",
     "s = Scheduler.default = Scheduler()\n",
@@ -56,7 +67,7 @@
     "CSV = SimpleCSVLoader(index_col=False, skipinitialspace=True,\n",
     "                usecols=cols, scheduler=s, throttle=100)\n",
     "CSV.input.filenames = CST.output[0]\n",
-    "stext = StatsExtender(usecols=cols)\n",
+    "stext = StatsFactory(usecols=cols)\n",
     "stext.create_dependent_modules(CSV, hist=True, min_=True,\n",
     "                              max_=True,\n",
     "                              var=True, distinct=True, \n",
@@ -127,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
