--- a/notebooks/HeatmapDemo.ipynb
+++ b/notebooks/HeatmapDemo.ipynb
@@ -11,19 +11,45 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "geographic-shannon",
+   "id": "055a7afc-58ae-467b-bbce-064f1080038a",
    "metadata": {},
    "outputs": [],
    "source": [
     "from progressivis import Scheduler\n",
     "from progressivis.io import CSVLoader\n",
     "from progressivis.stats import Histogram2D, Min, Max\n",
-    "from progressivis.datasets import get_dataset\n",
-    "from progressivis.vis import Heatmap\n",
+    "from progressivis.vis import Heatmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f6708ee2-4c10-4f6c-9208-1af4a5d020a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URLS = [f\"https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2015-0{n}.csv\" for n in range(1,7)]\n",
+    "URLS = [f\"/home/fekete/src/nyc-taxi/yellow_tripdata_2015-0{n}.csv.bz2\" for n in range(1,7)]\n",
+    "def filter_(df):\n",
+    "    lon = df['pickup_longitude']\n",
+    "    lat = df['pickup_latitude']\n",
+    "    return df[(lon>-74.10)&(lon<-73.7)&(lat>40.60)&(lat<41)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "geographic-shannon",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s = Scheduler.default = Scheduler()\n",
-    "URLS = [f\"https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2015-0{n}.csv\" for n in range(1,7)]\n",
-    "csv_module = CSVLoader(URLS, index_col=False, skipinitialspace=True,\n",
-    "                usecols=['pickup_longitude', 'pickup_latitude']) # load many compressed CSV files\n",
+    "\n",
+    "csv_module = CSVLoader(URLS,\n",
+    "                       index_col=False,\n",
+    "                       skipinitialspace=True,\n",
+    "                       filter_=filter_,\n",
+    "                        usecols=['pickup_longitude', 'pickup_latitude']) # load many compressed CSV files\n",
     "min_module = Min() # computes the min value of each column\n",
     "min_module.input.table = csv_module.output.result\n",
     "max_module = Max() # computes the max value of each column\n",
@@ -48,49 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "fleet-final",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Scheduler added module(s): ['csv_loader_1', 'heatmap_1', 'histogram2_d_1', 'max_1', 'min_1']\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bae3dff4db6b43f3a4a84617a998dd03",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x01\\x00\\x00\\x00\\x01\\x00\\x10\\x00\\x00\\x00\\x00)\\x89+\\xf…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "CancelledError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCancelledError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;31mCancelledError\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mCancelledError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_394214/2741999195.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mheatmap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_after_run\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_after_run\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0;32mawait\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/src/progressivis/progressivis/core/scheduler.py\u001b[0m in \u001b[0;36mstart\u001b[0;34m(self, tick_proc, idle_proc, coros, persist)\u001b[0m\n\u001b[1;32m    262\u001b[0m         \u001b[0mitd_flag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    263\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mpersist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 264\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0;32mawait\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtick_proc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midle_proc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoros\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    265\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    266\u001b[0m             \u001b[0mitd_flag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_temp_dir_if\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/src/progressivis/progressivis/core/scheduler.py\u001b[0m in \u001b[0;36mstart_impl\u001b[0;34m(self, tick_proc, idle_proc, coros)\u001b[0m\n\u001b[1;32m    246\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0midle_proc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    247\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_idle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midle_proc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 248\u001b[0;31m         \u001b[0;32mawait\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    249\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    250\u001b[0m     async def start(\n",
-      "\u001b[0;32m~/src/progressivis/progressivis/core/scheduler.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    337\u001b[0m         \u001b[0mKEEP_RUNNING\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_run_list\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    338\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_keep_running\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKEEP_RUNNING\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 339\u001b[0;31m         \u001b[0;32mawait\u001b[0m \u001b[0maio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgather\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mrunners\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    340\u001b[0m         \u001b[0;31m# print(\"Leaving run()\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    341\u001b[0m         \u001b[0;31m# while True:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mCancelledError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as ipw\n",
     "from IPython.display import display\n",
@@ -105,63 +92,85 @@
     "        display(wg)\n",
     "    else:\n",
     "        wg.value = img\n",
-    "heatmap.on_after_run(_after_run)\n",
-    "\n",
-    "s.task_start();"
+    "heatmap.on_after_run(_after_run)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "recent-marks",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<p><b>Scheduler</b> 0x7f7a904dae50 <b>modules:</b> 5,\n",
-       "        <b>running</b>,\n",
-       "        <b>run number:</b> 68\n",
-       "</p>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>ready</td><td>66</td><td>0</td><tr><td>min_1</td><td>min</td><td>blocked</td><td>67</td><td>1</td><tr><td>max_1</td><td>max</td><td>blocked</td><td>68</td><td>2</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>blocked</td><td>64</td><td>3</td><tr><td>heatmap_1</td><td>heatmap</td><td>blocked</td><td>65</td><td>4</td></tbody></table>"
-      ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x7f7a904dae50>"
+       "<Task pending name='Task-5' coro=<Scheduler.start() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:273>>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting scheduler\n",
+      "# Scheduler added module(s): ['csv_loader_1', 'heatmap_1', 'histogram2_d_1', 'max_1', 'min_1']\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "89f323312a77460ca79addb66aa94eb1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x01\\x00\\x00\\x00\\x01\\x00\\x10\\x00\\x00\\x00\\x00)\\x89+\\xf…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "s"
+    "s.task_start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7e5eb5b1-57af-495c-8a3d-4699c422e912",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Task pending name='Task-8' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leaving run loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "# s.task_stop()\n",
+    "# heatmap.params.transform = 4"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102d863a",
+   "id": "b9aa5fa3-75c6-4bf6-86a4-19233231c6c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -183,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
