Improve Heatmap notebooks [ci skip]

--- a/notebooks/HeatmapDemo.ipynb
+++ b/notebooks/HeatmapDemo.ipynb
@@ -77,21 +77,54 @@
    "execution_count": 4,
    "id": "fleet-final",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b115e90891f48938047562a489922fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Image(value=b'\\x00', height='512', width='512')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e6a6411481ad4fd4960ddf2ad7e78a3c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntText(value=0, disabled=True), Button(description='Stop', style=ButtonStyle())))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as ipw\n",
     "from IPython.display import display\n",
-    "wg = None\n",
+    "wg = ipw.Image(value=b'\\x00', width=512, height=512)\n",
+    "wint = ipw.IntText(value=0, disabled=True)\n",
+    "bstop = ipw.Button(description=\"Stop\")\n",
+    "def stop(b):\n",
+    "    s.task_stop()\n",
+    "bstop.on_click(stop)\n",
+    "\n",
+    "display(wg, ipw.HBox([wint, bstop]))\n",
     "async def _after_run(m, run_number):\n",
-    "    global wg\n",
+    "    global wg, wint\n",
     "    img = m.get_image_bin()\n",
     "    if img is None:\n",
     "        return\n",
-    "    if wg is None:\n",
-    "        wg = ipw.Image(value=img, width=512, height=512)\n",
-    "        display(wg)\n",
-    "    else:\n",
-    "        wg.value = img\n",
+    "    wg.value = img\n",
+    "    wint.value = m.last_update()\n",
     "heatmap.on_after_run(_after_run)"
    ]
   },
@@ -110,28 +143,6 @@
      "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting scheduler\n",
-      "# Scheduler added module(s): ['csv_loader_1', 'heatmap_1', 'histogram2_d_1', 'max_1', 'min_1']\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89f323312a77460ca79addb66aa94eb1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x01\\x00\\x00\\x00\\x01\\x00\\x10\\x00\\x00\\x00\\x00)\\x89+\\xf…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -143,25 +154,7 @@
    "execution_count": 6,
    "id": "7e5eb5b1-57af-495c-8a3d-4699c422e912",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Task pending name='Task-8' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Leaving run loop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# s.task_stop()\n",
     "# heatmap.params.transform = 4"
@@ -169,8 +162,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b9aa5fa3-75c6-4bf6-86a4-19233231c6c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting scheduler\n",
+      "# Scheduler added module(s): ['csv_loader_1', 'heatmap_1', 'histogram2_d_1', 'max_1', 'min_1']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.run_number()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6806f8f-a6b2-4358-8721-a62de8cb795b",
    "metadata": {},
    "outputs": [],
    "source": []
