--- a/notebooks/HeatmapDemo2.ipynb
+++ b/notebooks/HeatmapDemo2.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce36cbeda71e4e0c8cee574eb8880a8e",
+       "model_id": "66ac4dc8fd6747f79806ade33b2098f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,23 +95,21 @@
     "async def _after_run(m, run_number):\n",
     "    histo = m.to_json()['chart']['buffers'][0]['binnedPixels']\n",
     "    low = 0\n",
-    "    high = 2**16\n",
+    "    high = 1.0\n",
     "    cmin = histo.min()\n",
     "    cmax = histo.max()\n",
     "    cscale = cmax - cmin\n",
     "    scale_hl = float(high - low)\n",
     "    scale = float(high - low) / cscale\n",
-    "    data = (np.log1p(histo) * 1.0 - cmin) * scale_hl + 0.4999\n",
+    "    data = (histo - cmin) * scale\n",
     "    # data[data > high] = high\n",
     "    # data[data < 0] = 0\n",
     "    #data = data.tolist()\n",
-    "    if low != 0:\n",
-    "        data += low\n",
     "\n",
     "    res = []\n",
     "    spec_with_data = spec_no_data.copy()\n",
     "    for i, j, in product(range(data.shape[0]), range(data.shape[1])):\n",
-    "        res.append(dict(y=i, x=j, z=int(data[i,j])))\n",
+    "        res.append(dict(y=i, x=j, z=(data[i,j])))\n",
     "    spec_with_data[\"data\"] = {\n",
     "        \"name\": \"data\",\n",
     "        \"values\": res,\n",
@@ -124,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9f400972-0d67-4025-84a9-d7a73b756aef",
    "metadata": {},
    "outputs": [
@@ -134,16 +132,9 @@
        "<Task pending name='Task-8' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Leaving run loop\n"
-     ]
     }
    ],
    "source": [
