Fix quantiles to reuse dicts and remove percentiles

--- a/notebooks/userguide1.ipynb
+++ b/notebooks/userguide1.ipynb
@@ -20,6 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "LARGE_TAXI_FILE = \"https://www.aviz.fr/nyc-taxi/yellow_tripdata_2015-01.csv.bz2\"\n",
     "RESOLUTION=512\n",
     "\n",
@@ -37,10 +40,19 @@
    "execution_count": 2,
    "id": "b8f78c43-19bd-4bcc-8d86-35262edf81e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unexpected slot hint 0.03 for Slot(quantiles_1[result]->histogram2_d_1[min])\n",
+      "Unexpected slot hint 0.97 for Slot(quantiles_1[result]->histogram2_d_1[max])\n"
+     ]
+    }
+   ],
    "source": [
     "from progressivis.io import CSVLoader\n",
-    "from progressivis.stats import Histogram2D, Min, Max\n",
+    "from progressivis.stats import Histogram2D, Min, Max, Quantiles\n",
     "from progressivis.vis import Heatmap\n",
     "\n",
     "# Function to filter out trips outside of NYC.\n",
@@ -56,23 +68,26 @@
     "    ]\n",
     "\n",
     "# Create a csv loader filtering out data outside NYC\n",
-    "csv = CSVLoader(LARGE_TAXI_FILE, index_col=False, filter_=filter_)\n",
+    "csv = CSVLoader(LARGE_TAXI_FILE, index_col=False, usecols=['pickup_longitude', 'pickup_latitude'])  # , filter_=filter_)\n",
     "\n",
     "# Create a module to compute the min value progressively\n",
-    "min = Min()\n",
+    "# min = Min()\n",
     "# Connect it to the output of the csv module\n",
-    "min.input.table = csv.output.result\n",
+    "# min.input.table = csv.output.result\n",
     "# Create a module to compute the max value progressively\n",
-    "max = Max()\n",
+    "# max = Max()\n",
     "# Connect it to the output of the csv module\n",
-    "max.input.table = csv.output.result\n",
+    "# max.input.table = csv.output.result\n",
+    "\n",
+    "quantiles = Quantiles()\n",
+    "quantiles.input.table = csv.output.result\n",
     "# Create a module to compute the 2D histogram of the two columns specified\n",
     "# with the given resolution\n",
     "histogram2d = Histogram2D('pickup_longitude', 'pickup_latitude', xbins=RESOLUTION, ybins=RESOLUTION)\n",
     "# Connect the module to the csv results and the min,max bounds to rescale\n",
     "histogram2d.input.table = csv.output.result\n",
-    "histogram2d.input.min = min.output.result\n",
-    "histogram2d.input.max = max.output.result\n",
+    "histogram2d.input.min = quantiles.output.result[0.03]  # min.output.result\n",
+    "histogram2d.input.max = quantiles.output.result[0.97]  # max.output.result\n",
     "# Create a module to create an heatmap image from the histogram2d\n",
     "heatmap = Heatmap()\n",
     "# Connect it to the histogram2d\n",
@@ -88,7 +103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d2e4b5fab9441a5bfa1f87268e60bbf",
+       "model_id": "e09216a0053a4d8ab71fa800f0551ef2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,7 +140,7 @@
      "output_type": "stream",
      "text": [
       "Starting scheduler\n",
-      "# Scheduler added module(s): ['csv_loader_1', 'heatmap_1', 'histogram2_d_1', 'max_1', 'min_1']\n",
+      "# Scheduler added module(s): ['csv_loader_1', 'heatmap_1', 'histogram2_d_1', 'quantiles_1']\n",
       "Leaving run loop\n"
      ]
     }
@@ -158,10 +173,10 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<p><b>Scheduler</b> 0x76bdf616e2d0\n",
+       "<p><b>Scheduler</b> 0x7a50b1573090\n",
        "        <b>running</b>,\n",
-       "        <b>modules:</b> 5,\n",
-       "        <b>run number:</b> 186\n",
+       "        <b>modules:</b> 4,\n",
+       "        <b>run number:</b> 814\n",
        "</p>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -169,10 +184,10 @@
        "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>186</td><td>0</td><tr><td>min_1</td><td>min</td><td>state_blocked</td><td>182</td><td>1</td><tr><td>max_1</td><td>max</td><td>state_blocked</td><td>183</td><td>2</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>184</td><td>3</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>185</td><td>4</td></tbody></table>"
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>813</td><td>0</td><tr><td>quantiles_1</td><td>quantiles</td><td>state_blocked</td><td>814</td><td>1</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_ready</td><td>811</td><td>2</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>812</td><td>3</td></tbody></table>"
       ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x76bdf616e2d0>"
+       "<progressivis.core.scheduler.Scheduler at 0x7a50b1573090>"
       ]
      },
      "execution_count": 5,
@@ -188,7 +203,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "570f93a3-55f4-403a-9799-f63466777d5f",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -202,7 +219,7 @@
     }
    ],
    "source": [
-    "csv.scheduler().task_stop()\n"
+    "csv.scheduler().task_stop()"
    ]
   },
   {
@@ -216,8 +233,8 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,auto:percent",
-   "rst2md": true
+   "formats": "ipynb,py:percent",
+   "rst2md": false
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
