simplify API, avoiding circular references. Use apy.py instead of __init__.py to export stuff

--- a/notebooks/userguide1.ipynb
+++ b/notebooks/userguide1.ipynb
@@ -10,34 +10,35 @@
     "This notebook shows the simplest code to download all the New York Yellow Taxi trips from 2015. They were all geolocated and the trip data is stored in multiple CSV files.\n",
     "We visualize progressively the pickup locations (where people have been picked up by the taxis).\n",
     "\n",
-    "First, we define a few constants, where the file is located, the desired resolution, and the bounds of New York City."
+    "First, we define a few constants, where the file is located and the desired resolution."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "41a07fd5",
+   "id": "1dace858-ebde-4875-bd0d-3641245b340b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We make sure the libraries are reloaded when modified\n",
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "LARGE_TAXI_FILE = \"https://www.aviz.fr/nyc-taxi/yellow_tripdata_2015-01.csv.bz2\"\n",
-    "RESOLUTION=512\n",
-    "\n",
-    "# See https://en.wikipedia.org/wiki/Module:Location_map/data/USA_New_York_City\n",
-    "bounds = {\n",
-    "\t\"top\": 40.92,\n",
-    "\t\"bottom\": 40.49,\n",
-    "\t\"left\": -74.27,\n",
-    "\t\"right\": -73.68,\n",
-    "}"
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "41a07fd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LARGE_TAXI_FILE = \"https://www.aviz.fr/nyc-taxi/yellow_tripdata_2015-01.csv.bz2\"\n",
+    "RESOLUTION=512"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "b8f78c43-19bd-4bcc-8d86-35262edf81e1",
    "metadata": {},
    "outputs": [
@@ -51,34 +52,18 @@
     }
    ],
    "source": [
-    "from progressivis.io import CSVLoader\n",
-    "from progressivis.stats import Histogram2D, Min, Max, Quantiles\n",
-    "from progressivis.vis import Heatmap\n",
+    "from progressivis import (\n",
+    "    CSVLoader,\n",
+    "    Histogram2D,\n",
+    "    Quantiles,\n",
+    "    Heatmap\n",
+    ")\n",
     "\n",
-    "# Function to filter out trips outside of NYC.\n",
-    "# Since there are outliers in the files.\n",
-    "def filter_(df):\n",
-    "    lon = df['pickup_longitude']\n",
-    "    lat = df['pickup_latitude']\n",
-    "    return df[\n",
-    "        (lon>bounds[\"left\"]) &\n",
-    "        (lon<bounds[\"right\"]) &\n",
-    "        (lat>bounds[\"bottom\"]) &\n",
-    "        (lat<bounds[\"top\"])\n",
-    "    ]\n",
     "\n",
     "# Create a csv loader filtering out data outside NYC\n",
     "csv = CSVLoader(LARGE_TAXI_FILE, index_col=False, usecols=['pickup_longitude', 'pickup_latitude'])  # , filter_=filter_)\n",
     "\n",
-    "# Create a module to compute the min value progressively\n",
-    "# min = Min()\n",
-    "# Connect it to the output of the csv module\n",
-    "# min.input.table = csv.output.result\n",
-    "# Create a module to compute the max value progressively\n",
-    "# max = Max()\n",
-    "# Connect it to the output of the csv module\n",
-    "# max.input.table = csv.output.result\n",
-    "\n",
+    "# Create a Quantile module to get rid of the 3% outliers both sides\n",
     "quantiles = Quantiles()\n",
     "quantiles.input.table = csv.output.result\n",
     "# Create a module to compute the 2D histogram of the two columns specified\n",
@@ -86,8 +71,8 @@
     "histogram2d = Histogram2D('pickup_longitude', 'pickup_latitude', xbins=RESOLUTION, ybins=RESOLUTION)\n",
     "# Connect the module to the csv results and the min,max bounds to rescale\n",
     "histogram2d.input.table = csv.output.result\n",
-    "histogram2d.input.min = quantiles.output.result[0.03]  # min.output.result\n",
-    "histogram2d.input.max = quantiles.output.result[0.97]  # max.output.result\n",
+    "histogram2d.input.min = quantiles.output.result[0.03]\n",
+    "histogram2d.input.max = quantiles.output.result[0.97]\n",
     "# Create a module to create an heatmap image from the histogram2d\n",
     "heatmap = Heatmap()\n",
     "# Connect it to the histogram2d\n",
@@ -96,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7dbd2da4-f497-4380-9580-b5a718426eb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e09216a0053a4d8ab71fa800f0551ef2",
+       "model_id": "65f5dbb60f2b4d5c9a5243a35af1433c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2c1f0951-2b29-44e5-9fca-6806bdabf803",
    "metadata": {},
    "outputs": [
@@ -131,7 +116,7 @@
        "<Task pending name='Task-5' coro=<Scheduler.start() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:273>>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -152,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7741831c-7a31-4aee-be94-455bee16805d",
    "metadata": {},
    "outputs": [
@@ -173,10 +158,10 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<p><b>Scheduler</b> 0x7a50b1573090\n",
+       "<p><b>Scheduler</b> 0x715f9df45a50\n",
        "        <b>running</b>,\n",
        "        <b>modules:</b> 4,\n",
-       "        <b>run number:</b> 814\n",
+       "        <b>run number:</b> 899\n",
        "</p>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -184,13 +169,13 @@
        "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>813</td><td>0</td><tr><td>quantiles_1</td><td>quantiles</td><td>state_blocked</td><td>814</td><td>1</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_ready</td><td>811</td><td>2</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>812</td><td>3</td></tbody></table>"
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>897</td><td>0</td><tr><td>quantiles_1</td><td>quantiles</td><td>state_blocked</td><td>898</td><td>1</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>899</td><td>2</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>896</td><td>3</td></tbody></table>"
       ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x7a50b1573090>"
+       "<progressivis.core.scheduler.Scheduler at 0x715f9df45a50>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "570f93a3-55f4-403a-9799-f63466777d5f",
    "metadata": {
     "lines_to_next_cell": 2
@@ -213,7 +198,7 @@
        "<Task pending name='Task-8' coro=<Scheduler.stop() running at /home/fekete/src/progressivis/progressivis/core/scheduler.py:610>>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
