--- a/notebooks/HeatmapDemo.ipynb
+++ b/notebooks/HeatmapDemo.ipynb
@@ -33,7 +33,8 @@
     "def filter_(df):\n",
     "    lon = df['pickup_longitude']\n",
     "    lat = df['pickup_latitude']\n",
-    "    return df[(lon>-74.10)&(lon<-73.7)&(lat>40.60)&(lat<41)]\n"
+    "    return df[(lon>-74.10)&(lon<-73.7)&(lat>40.60)&(lat<41)]\n",
+    "\n"
    ]
   },
   {
@@ -214,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
