--- a/notebooks/userguide1.ipynb
+++ b/notebooks/userguide1.ipynb
@@ -88,7 +88,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65f5dbb60f2b4d5c9a5243a35af1433c",
+       "model_id": "8e09a538c718466681ac90460766f4de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,10 +158,10 @@
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
-       "<p><b>Scheduler</b> 0x715f9df45a50\n",
+       "<p><b>Scheduler</b> 0x73dbd42aab10\n",
        "        <b>running</b>,\n",
        "        <b>modules:</b> 4,\n",
-       "        <b>run number:</b> 899\n",
+       "        <b>run number:</b> 1594\n",
        "</p>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -169,10 +169,10 @@
        "      <th>Id</th><th>Class</th><th>State</th><th>Last Update</th><th>Order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
-       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>897</td><td>0</td><tr><td>quantiles_1</td><td>quantiles</td><td>state_blocked</td><td>898</td><td>1</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>899</td><td>2</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>896</td><td>3</td></tbody></table>"
+       "  <tbody><tr><td>csv_loader_1</td><td>csv_loader</td><td>state_ready</td><td>1593</td><td>0</td><tr><td>quantiles_1</td><td>quantiles</td><td>state_blocked</td><td>1594</td><td>1</td><tr><td>histogram2_d_1</td><td>histogram2_d</td><td>state_blocked</td><td>1591</td><td>2</td><tr><td>heatmap_1</td><td>heatmap</td><td>state_blocked</td><td>1592</td><td>3</td></tbody></table>"
       ],
       "text/plain": [
-       "<progressivis.core.scheduler.Scheduler at 0x715f9df45a50>"
+       "<progressivis.core.scheduler.Scheduler at 0x73dbd42aab10>"
       ]
      },
      "execution_count": 6,
